remove no longer needed page break on print view

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -93,7 +93,4 @@ p {
   .content {
     padding-bottom: 0;
   }
-  .page-break-after {
-    page-break-after: always;
-  }
 }
